--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,10 @@ exclude = ["./pycgmes/shacl"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-poetry = ">=1.5.0" # key 'priority' in source
+poetry = ">=1.5.0 <2" # key 'priority' in source
 pydantic = ">=2" # Used for dataclasses
 chevron = ">=0.14.0" # Used for writer
+lxml = "*"
 
 [tool.poetry.group.dev.dependencies]
 coverage = { extras = ["toml"], version = "*" } # unit test coverage
@@ -39,6 +40,7 @@ reuse = "*" # Check licence headers
 ruff = "*" # Linter/fixer. Replaces isort autoflake and pylint
 pytest = "*"
 SCons = "*" # Command runner
+types-lxml = "*"
 
 [tool.poetry.group.notebook.dependencies]
 matplotlib = "*"
